[SAFRAN-1136] Updates mainly in the binding wizard in the mockup view
- Adding containers to distinguish Entity and DTO in the binding wizard
- Selecting by default Entities/DTOs already bound to parent view
containers of a view container in the binding wizard
-- Updating ISObjectSelectionWizardPage to account for always selected
elements
- Showing impacted elements when moving a ViewElement or ViewContainer
in the Mockup view
- Requesting user confirmation before deleting (via the binding wizard)
a BindingInfo that involves ViewElements
- The color of an Edge in the BindingEditor is now black